--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,15 @@
 name: chest_flutter
 description: Utilities for working with Chest and Flutter.
 publish_to: 'none'
-version: 1.0.0+1
+version: 0.1.0-0
 
 environment:
   sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   async: ^2.4.2
-  chest:
-    path: ../chest
+  chest: ^0.1.0-0
   flutter:
     sdk: flutter
-  flutter_tapers:
-    path: ../tapers/flutter_tapers
+  flutter_tapers: ^0.1.0-0
   path_provider: ^1.6.27
