--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: chest_flutter
 description: Utilities for working with Chest and Flutter.
-publish_to: 'none'
 version: 0.1.0-0
+repository: https://github.com/chestdb/chest_flutter
 
 environment:
   sdk: ">=2.12.0-0 <3.0.0"
