--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: chest_flutter
 description: Utilities for working with Chest and Flutter.
-version: 0.1.2
+version: 0.1.3
 repository: https://github.com/chestdb/chest_flutter
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  flutter: '>=3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   async: ^2.4.2
